--- a/src/scss/components/_contact-us.scss
+++ b/src/scss/components/_contact-us.scss
@@ -2,6 +2,10 @@
     position: relative;
     margin: -150px auto 50px !important;
 
+    @media (max-width:991px) {
+        margin: -70px auto 50px !important;
+    }
+
     h3{
         margin-bottom: 0;
 
@@ -286,6 +290,7 @@
 
         @media (max-width:991px) {
             min-height: 350px;
+            border-radius: 20px;
         }
 
         @media (max-width:767px) {
