--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -441,7 +441,7 @@ footer .footer-contact {
 @media (max-width: 767px) {
   footer .footer-contact {
     background: linear-gradient(178.88deg, #101010 10.79%, #0033FF 53.01%, #101010 99.04%);
-    padding: 300px 0 21px;
+    padding: 250px 0 21px;
     margin-top: -190px;
   }
 }
@@ -3484,6 +3484,11 @@ footer .footer-main .footer-links__2 .links {
   position: relative;
   margin: -150px auto 50px !important;
 }
+@media (max-width: 991px) {
+  .contactus-form {
+    margin: -70px auto 50px !important;
+  }
+}
 .contactus-form h3 {
   margin-bottom: 0;
 }
@@ -3768,6 +3773,7 @@ footer .footer-main .footer-links__2 .links {
 @media (max-width: 991px) {
   .contact-us-map iframe {
     min-height: 350px;
+    border-radius: 20px;
   }
 }
 @media (max-width: 767px) {
