--- a/src/scss/components/_service-detail-wrapper.scss
+++ b/src/scss/components/_service-detail-wrapper.scss
@@ -157,6 +157,10 @@
     .box-items.version-2{
         margin: 70px auto 100px auto;
 
+        @media (max-width: 767px) {
+            margin: 30px auto 70px auto;
+        }
+
         .grid-2{
             display: grid;
             grid-template-columns: repeat(3, 1fr);
@@ -165,10 +169,15 @@
             @media (max-width: 991px) {
                 gap: 15px;
             }
+
+            @media (max-width: 767px) {
+                grid-template-columns: repeat(2, 1fr);
+                margin: 0 auto 30px auto;
+            }
     
             @media (max-width: 600px) {
                 display: block;
-                margin: 30px auto 100px auto;
+                margin: 0 auto 30px auto;
             }
     
             .item{
@@ -221,6 +230,10 @@
     
         .btn-blue{
             margin: 50px auto 0 auto;
+
+            @media (max-width: 767px) {
+                margin: 30px auto 0 auto;
+            }
         }
     }
 
@@ -516,6 +529,14 @@
         position: relative;
         margin: 200px auto;
 
+        @media (max-width: 1400px) {
+            margin: 100px auto;
+        }
+
+        @media (max-width: 991px) {
+            margin: 70px auto;
+        }
+
         &__bgsvg{
             position: absolute;
             right: 0;
@@ -531,8 +552,20 @@
             display: flex;
             gap: 70px;
 
+            @media (max-width:991px) {
+                gap: 20px;
+            }
+
+            @media (max-width: 767px) {
+                display: block;
+            }
+
             &__content{
                 width: 60%;
+
+                @media (max-width: 767px) {
+                    width: 100%;
+                }
 
                 h3{
                     margin-bottom: 30px;
@@ -540,6 +573,11 @@
 
                 p{
                     margin-bottom: 0;
+
+                    @media (max-width: 767px) {
+                        font-size: 16px;
+                        line-height: 30px;
+                    }
                 }
 
                 .points-list{
@@ -548,6 +586,11 @@
                         gap: 40px 100px;
                         margin-top: 60px;
                         grid-auto-flow: dense; 
+
+                        @media (max-width: 1200px) {
+                            gap: 20px 60px;
+                            margin-top: 30px;
+                        }
             
                         @media (max-width:767px) {
                             display: block;
@@ -561,10 +604,14 @@
                             padding-left: 40px;
                             font-size: 22px;
                             line-height: 25px;
-            
-                            @media (max-width:767px) {
+
+                            @media (max-width:991px) {
                                 font-size: 18px;
-            
+                            }
+
+                            @media (max-width:767px) {
+                                font-size: 22px;
+
                                 &:not(:first-child){
                                     margin-top: 30px;
                                 }
@@ -582,6 +629,11 @@
 
             &__img{
                 width: 40%;
+
+                @media (max-width: 767px) {
+                    width: 100%;
+                    margin-top: 40px;
+                }
             }
         }
     }
@@ -590,10 +642,26 @@
         position: relative;
         margin: 200px auto;
 
+        @media (max-width: 1400px) {
+            margin: 100px auto;
+        }
+
+        @media (max-width: 991px) {
+            margin: 70px auto;
+        }
+
+        @media (max-width: 767px) {
+            padding-bottom: 70px;
+        }
+
         &__bgsvg{
             position: absolute;
             top: -55%;
             z-index: -1;
+
+            @media (max-width:1400px) {
+                max-width: 55%;
+            }
 
             @media (max-width:991px) {
                 display: none;
@@ -604,22 +672,58 @@
             display: flex;
             gap: 80px;
 
+            @media (max-width: 991px) {
+                gap: 30px;
+            }
+
+            @media (max-width: 767px) {
+               display: block;
+            }
+
             &__title{
                 width: 50%;
 
+                @media (max-width: 767px) {
+                    width: 100%;
+                    margin-bottom: 40px;
+                 }
+
                 .btn-blue{
                     margin-top: 40px;
+
+                    @media (max-width: 767px) {
+                        position: absolute;
+                        left: 15px;
+                        bottom: 0;
+                    }
                 }
             }
 
             &__content{
                 width: 50%;
+
+                @media (max-width: 767px) {
+                    width: 100%;
+
+                    p{
+                        font-size: 16px;
+                        line-height: 30px;
+                    }
+                 }
             }
         }
     }
 
     .development-process-wrapper{
         margin: 200px auto 150px auto;
+
+        @media (max-width: 1400px) {
+            margin: 100px auto;
+        }
+
+        @media (max-width: 991px) {
+            margin: 70px auto;
+        }
 
         .d-flex{
             gap: 40px;
@@ -656,6 +760,10 @@
                 border: 1px solid $blue;
                 cursor: pointer;
 
+                @media (max-width:1300px) {
+                    width: 260px;
+                }
+
                 &:not(:first-child){
                     margin-top: 25px;
                 }
@@ -686,6 +794,10 @@
                           transparent 15px,
                         );
                         z-index: -1;
+
+                        @media (max-width:1300px) {
+                            right: 260px;
+                        }
                       }
                 }
 
@@ -706,6 +818,10 @@
                           transparent 15px
                         );
                         z-index:-1;
+
+                        @media (max-width:1300px) {
+                            right: 130px;
+                        }
                       }
                 }
             }
@@ -713,6 +829,10 @@
             @for $i from 1 through 7 {
                 .step:nth-child(#{$i}) {
                   margin-left: calc(150px * #{$i - 1});
+
+                @media (max-width:1300px) {
+                    margin-left: calc(130px * #{$i - 1});
+                }
               
                   &:before {
                     content: '';
@@ -730,6 +850,10 @@
                       transparent 15px
                     );
                     z-index: -1;
+
+                    @media (max-width:1300px) {
+                        left: calc(130px * #{$i - 1});
+                    }
                   }
                 }
               }
