--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1794,7 +1794,7 @@ footer .footer-main .footer-links__2 .links {
     padding-bottom: 170px;
   }
 }
-@media (max-width: 600px) {
+@media (max-width: 767px) {
   .hero-wrapper.version-1.w-full, .hero-wrapper.version-2.w-full, .hero-wrapper.version-3.w-full {
     padding-bottom: 130px;
   }
@@ -1897,11 +1897,6 @@ footer .footer-main .footer-links__2 .links {
 .hero-wrapper.version-1 .hero-wrapper__content.content-width, .hero-wrapper.version-2 .hero-wrapper__content.content-width, .hero-wrapper.version-3 .hero-wrapper__content.content-width {
   max-width: 1200px;
 }
-@media (max-width: 992px) {
-  .hero-wrapper.version-1 .hero-wrapper__content.content-width, .hero-wrapper.version-2 .hero-wrapper__content.content-width, .hero-wrapper.version-3 .hero-wrapper__content.content-width {
-    min-height: 500px;
-  }
-}
 @media (max-width: 767px) {
   .hero-wrapper.version-1 .hero-wrapper__content.content-width, .hero-wrapper.version-2 .hero-wrapper__content.content-width, .hero-wrapper.version-3 .hero-wrapper__content.content-width {
     min-height: 595px;
@@ -1967,7 +1962,6 @@ footer .footer-main .footer-links__2 .links {
 }
 @media (max-width: 991px) {
   .hero-wrapper.version-2 .hero-wrapper__bg {
-    min-height: 500px;
     background-position: right top !important;
   }
 }
@@ -2411,7 +2405,7 @@ footer .footer-main .footer-links__2 .links {
 @media (max-width: 1100px) {
   .testimonial-wrapper .testimonial-chat {
     height: 45px;
-    font-size: 17px;
+    font-size: 15px;
   }
 }
 @media (max-width: 767px) {
@@ -4658,6 +4652,11 @@ footer .footer-main .footer-links__2 .links {
 .service-detail-wrapper .box-items.version-2, .services-content-wrapper .box-items.version-2 {
   margin: 70px auto 100px auto;
 }
+@media (max-width: 767px) {
+  .service-detail-wrapper .box-items.version-2, .services-content-wrapper .box-items.version-2 {
+    margin: 30px auto 70px auto;
+  }
+}
 .service-detail-wrapper .box-items.version-2 .grid-2, .services-content-wrapper .box-items.version-2 .grid-2 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -4668,10 +4667,16 @@ footer .footer-main .footer-links__2 .links {
     gap: 15px;
   }
 }
+@media (max-width: 767px) {
+  .service-detail-wrapper .box-items.version-2 .grid-2, .services-content-wrapper .box-items.version-2 .grid-2 {
+    grid-template-columns: repeat(2, 1fr);
+    margin: 0 auto 30px auto;
+  }
+}
 @media (max-width: 600px) {
   .service-detail-wrapper .box-items.version-2 .grid-2, .services-content-wrapper .box-items.version-2 .grid-2 {
     display: block;
-    margin: 30px auto 100px auto;
+    margin: 0 auto 30px auto;
   }
 }
 .service-detail-wrapper .box-items.version-2 .grid-2 .item, .services-content-wrapper .box-items.version-2 .grid-2 .item {
@@ -4719,6 +4724,11 @@ footer .footer-main .footer-links__2 .links {
 }
 .service-detail-wrapper .box-items.version-2 .btn-blue, .services-content-wrapper .box-items.version-2 .btn-blue {
   margin: 50px auto 0 auto;
+}
+@media (max-width: 767px) {
+  .service-detail-wrapper .box-items.version-2 .btn-blue, .services-content-wrapper .box-items.version-2 .btn-blue {
+    margin: 30px auto 0 auto;
+  }
 }
 .service-detail-wrapper .box-items-2, .services-content-wrapper .box-items-2 {
   margin: 100px auto;
@@ -5003,6 +5013,16 @@ footer .footer-main .footer-links__2 .links {
   position: relative;
   margin: 200px auto;
 }
+@media (max-width: 1400px) {
+  .services-content-wrapper .resources-wrapper {
+    margin: 100px auto;
+  }
+}
+@media (max-width: 991px) {
+  .services-content-wrapper .resources-wrapper {
+    margin: 70px auto;
+  }
+}
 .services-content-wrapper .resources-wrapper__bgsvg {
   position: absolute;
   right: 0;
@@ -5018,8 +5038,23 @@ footer .footer-main .footer-links__2 .links {
   display: flex;
   gap: 70px;
 }
+@media (max-width: 991px) {
+  .services-content-wrapper .resources-wrapper-row {
+    gap: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .services-content-wrapper .resources-wrapper-row {
+    display: block;
+  }
+}
 .services-content-wrapper .resources-wrapper-row__content {
   width: 60%;
+}
+@media (max-width: 767px) {
+  .services-content-wrapper .resources-wrapper-row__content {
+    width: 100%;
+  }
 }
 .services-content-wrapper .resources-wrapper-row__content h3 {
   margin-bottom: 30px;
@@ -5027,12 +5062,24 @@ footer .footer-main .footer-links__2 .links {
 .services-content-wrapper .resources-wrapper-row__content p {
   margin-bottom: 0;
 }
+@media (max-width: 767px) {
+  .services-content-wrapper .resources-wrapper-row__content p {
+    font-size: 16px;
+    line-height: 30px;
+  }
+}
 .services-content-wrapper .resources-wrapper-row__content .points-list {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 40px 100px;
   margin-top: 60px;
   grid-auto-flow: dense;
+}
+@media (max-width: 1200px) {
+  .services-content-wrapper .resources-wrapper-row__content .points-list {
+    gap: 20px 60px;
+    margin-top: 30px;
+  }
 }
 @media (max-width: 767px) {
   .services-content-wrapper .resources-wrapper-row__content .points-list {
@@ -5048,9 +5095,14 @@ footer .footer-main .footer-links__2 .links {
   font-size: 22px;
   line-height: 25px;
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .services-content-wrapper .resources-wrapper-row__content .points-list p {
     font-size: 18px;
+  }
+}
+@media (max-width: 767px) {
+  .services-content-wrapper .resources-wrapper-row__content .points-list p {
+    font-size: 22px;
   }
   .services-content-wrapper .resources-wrapper-row__content .points-list p:not(:first-child) {
     margin-top: 30px;
@@ -5065,14 +5117,40 @@ footer .footer-main .footer-links__2 .links {
 .services-content-wrapper .resources-wrapper-row__img {
   width: 40%;
 }
+@media (max-width: 767px) {
+  .services-content-wrapper .resources-wrapper-row__img {
+    width: 100%;
+    margin-top: 40px;
+  }
+}
 .services-content-wrapper .content-small-wrapper {
   position: relative;
   margin: 200px auto;
+}
+@media (max-width: 1400px) {
+  .services-content-wrapper .content-small-wrapper {
+    margin: 100px auto;
+  }
+}
+@media (max-width: 991px) {
+  .services-content-wrapper .content-small-wrapper {
+    margin: 70px auto;
+  }
+}
+@media (max-width: 767px) {
+  .services-content-wrapper .content-small-wrapper {
+    padding-bottom: 70px;
+  }
 }
 .services-content-wrapper .content-small-wrapper__bgsvg {
   position: absolute;
   top: -55%;
   z-index: -1;
+}
+@media (max-width: 1400px) {
+  .services-content-wrapper .content-small-wrapper__bgsvg {
+    max-width: 55%;
+  }
 }
 @media (max-width: 991px) {
   .services-content-wrapper .content-small-wrapper__bgsvg {
@@ -5083,17 +5161,59 @@ footer .footer-main .footer-links__2 .links {
   display: flex;
   gap: 80px;
 }
+@media (max-width: 991px) {
+  .services-content-wrapper .content-small-wrapper-row {
+    gap: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .services-content-wrapper .content-small-wrapper-row {
+    display: block;
+  }
+}
 .services-content-wrapper .content-small-wrapper-row__title {
   width: 50%;
+}
+@media (max-width: 767px) {
+  .services-content-wrapper .content-small-wrapper-row__title {
+    width: 100%;
+    margin-bottom: 40px;
+  }
 }
 .services-content-wrapper .content-small-wrapper-row__title .btn-blue {
   margin-top: 40px;
 }
+@media (max-width: 767px) {
+  .services-content-wrapper .content-small-wrapper-row__title .btn-blue {
+    position: absolute;
+    left: 15px;
+    bottom: 0;
+  }
+}
 .services-content-wrapper .content-small-wrapper-row__content {
   width: 50%;
 }
+@media (max-width: 767px) {
+  .services-content-wrapper .content-small-wrapper-row__content {
+    width: 100%;
+  }
+  .services-content-wrapper .content-small-wrapper-row__content p {
+    font-size: 16px;
+    line-height: 30px;
+  }
+}
 .services-content-wrapper .development-process-wrapper {
   margin: 200px auto 150px auto;
+}
+@media (max-width: 1400px) {
+  .services-content-wrapper .development-process-wrapper {
+    margin: 100px auto;
+  }
+}
+@media (max-width: 991px) {
+  .services-content-wrapper .development-process-wrapper {
+    margin: 70px auto;
+  }
 }
 .services-content-wrapper .development-process-wrapper .d-flex {
   gap: 40px;
@@ -5124,6 +5244,11 @@ footer .footer-main .footer-links__2 .links {
   border: 1px solid #0033FF;
   cursor: pointer;
 }
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step {
+    width: 260px;
+  }
+}
 .services-content-wrapper .development-process-wrapper__steps .step:not(:first-child) {
   margin-top: 25px;
 }
@@ -5145,6 +5270,11 @@ footer .footer-main .footer-links__2 .links {
   background: repeating-linear-gradient(to bottom, #2B2B2B 0, #2B2B2B 5px, transparent 5px, transparent 15px);
   z-index: -1;
 }
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(6):after {
+    right: 260px;
+  }
+}
 .services-content-wrapper .development-process-wrapper__steps .step:last-child:after {
   content: "";
   position: absolute;
@@ -5156,8 +5286,18 @@ footer .footer-main .footer-links__2 .links {
   background: repeating-linear-gradient(to bottom, #2B2B2B 0, #2B2B2B 5px, transparent 5px, transparent 15px);
   z-index: -1;
 }
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:last-child:after {
+    right: 130px;
+  }
+}
 .services-content-wrapper .development-process-wrapper__steps .step:nth-child(1) {
   margin-left: calc(150px * 0);
+}
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(1) {
+    margin-left: calc(130px * 0);
+  }
 }
 .services-content-wrapper .development-process-wrapper__steps .step:nth-child(1):before {
   content: "";
@@ -5170,8 +5310,18 @@ footer .footer-main .footer-links__2 .links {
   background: repeating-linear-gradient(to bottom, #2B2B2B 0, #2B2B2B 5px, transparent 5px, transparent 15px);
   z-index: -1;
 }
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(1):before {
+    left: calc(130px * 0);
+  }
+}
 .services-content-wrapper .development-process-wrapper__steps .step:nth-child(2) {
   margin-left: calc(150px * 1);
+}
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(2) {
+    margin-left: calc(130px * 1);
+  }
 }
 .services-content-wrapper .development-process-wrapper__steps .step:nth-child(2):before {
   content: "";
@@ -5184,8 +5334,18 @@ footer .footer-main .footer-links__2 .links {
   background: repeating-linear-gradient(to bottom, #2B2B2B 0, #2B2B2B 5px, transparent 5px, transparent 15px);
   z-index: -1;
 }
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(2):before {
+    left: calc(130px * 1);
+  }
+}
 .services-content-wrapper .development-process-wrapper__steps .step:nth-child(3) {
   margin-left: calc(150px * 2);
+}
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(3) {
+    margin-left: calc(130px * 2);
+  }
 }
 .services-content-wrapper .development-process-wrapper__steps .step:nth-child(3):before {
   content: "";
@@ -5198,8 +5358,18 @@ footer .footer-main .footer-links__2 .links {
   background: repeating-linear-gradient(to bottom, #2B2B2B 0, #2B2B2B 5px, transparent 5px, transparent 15px);
   z-index: -1;
 }
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(3):before {
+    left: calc(130px * 2);
+  }
+}
 .services-content-wrapper .development-process-wrapper__steps .step:nth-child(4) {
   margin-left: calc(150px * 3);
+}
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(4) {
+    margin-left: calc(130px * 3);
+  }
 }
 .services-content-wrapper .development-process-wrapper__steps .step:nth-child(4):before {
   content: "";
@@ -5212,8 +5382,18 @@ footer .footer-main .footer-links__2 .links {
   background: repeating-linear-gradient(to bottom, #2B2B2B 0, #2B2B2B 5px, transparent 5px, transparent 15px);
   z-index: -1;
 }
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(4):before {
+    left: calc(130px * 3);
+  }
+}
 .services-content-wrapper .development-process-wrapper__steps .step:nth-child(5) {
   margin-left: calc(150px * 4);
+}
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(5) {
+    margin-left: calc(130px * 4);
+  }
 }
 .services-content-wrapper .development-process-wrapper__steps .step:nth-child(5):before {
   content: "";
@@ -5226,8 +5406,18 @@ footer .footer-main .footer-links__2 .links {
   background: repeating-linear-gradient(to bottom, #2B2B2B 0, #2B2B2B 5px, transparent 5px, transparent 15px);
   z-index: -1;
 }
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(5):before {
+    left: calc(130px * 4);
+  }
+}
 .services-content-wrapper .development-process-wrapper__steps .step:nth-child(6) {
   margin-left: calc(150px * 5);
+}
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(6) {
+    margin-left: calc(130px * 5);
+  }
 }
 .services-content-wrapper .development-process-wrapper__steps .step:nth-child(6):before {
   content: "";
@@ -5240,8 +5430,18 @@ footer .footer-main .footer-links__2 .links {
   background: repeating-linear-gradient(to bottom, #2B2B2B 0, #2B2B2B 5px, transparent 5px, transparent 15px);
   z-index: -1;
 }
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(6):before {
+    left: calc(130px * 5);
+  }
+}
 .services-content-wrapper .development-process-wrapper__steps .step:nth-child(7) {
   margin-left: calc(150px * 6);
+}
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(7) {
+    margin-left: calc(130px * 6);
+  }
 }
 .services-content-wrapper .development-process-wrapper__steps .step:nth-child(7):before {
   content: "";
@@ -5253,6 +5453,11 @@ footer .footer-main .footer-links__2 .links {
   height: 100%;
   background: repeating-linear-gradient(to bottom, #2B2B2B 0, #2B2B2B 5px, transparent 5px, transparent 15px);
   z-index: -1;
+}
+@media (max-width: 1300px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(7):before {
+    left: calc(130px * 6);
+  }
 }
 
 body {
